# project1

./: README.md  operations2.json  project.py  pyproject.toml
test/: tests.py
utils/: utils.py
