[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["danyaannadurdyev <nice.eroshka@mail.ru>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
