[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["danyaannadurdyev <nice.eroshka@mail.ru>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
